[package]
name = "libcantal"
description = """
    A rust library to submit statistics to cantal monitoring server
"""
license = "MIT/Apache-2.0"
readme = "README.rst"
keywords = ["linux", "monitoring", "meter"]
homepage = "http://github.com/tailhook/libcantal"
documentation = "http://tailhook.github.io/libcantal/"
version = "0.1.0"
authors = ["paul@colomiets.name"]

[dependencies]
lazy_static = "0.2.1"
atomic = "0.3.3"

[lib]
name = "libcantal"
path = "src/lib.rs"

